--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Movie nominations web site created with React"
+    />
+    <meta
+      name="image"
+      property="og:image"
+      content="https://maclapinski.github.io/omdb_movie_app/public/preview.png"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -36,7 +41,8 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="../styles/css/style.css" />
-    <title>React App</title>
+    <link rel="stylesheet" href="./preview.png" />
+    <title>Move Nominations</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
