--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta
       name="image"
       property="og:image"
-      content="https://maclapinski.github.io/omdb_movie_app/public/preview.png"
+      content="https://nominations-app.netlify.app/preview.png"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
